# glTF_3DModelViewer

./: CMakeLists.txt
assets/: knee_converted.dicom
src/: CMakeLists.txt  main.cpp
